--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "react-big-calendar": "^1.13.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.2",
+    "sass": "^1.77.6",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
