--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "gti": "^0.0.3",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.0",
-    "react-bootstrap": "^2.10.2",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
+    "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
