--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
     "sass": "^1.77.6",
