--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "gti": "^0.0.3",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.0",
